--- a/CreateProduct.html
+++ b/CreateProduct.html
@@ -273,7 +273,7 @@
       <tr>
         <th scope="row">1</th>
         <td>61802</td>
-        <td>Dog Bed Gent antibac 80x60 cm</td>
+        <td class="ellipsis">Dog Bed Gent antibac 80x60 cm</td>
         <td>[------- 品牌商品 -------]-Hunter </td>
         <td>商品</td>
         <td>4016739618023</td>
