--- a/CreateProduct.html
+++ b/CreateProduct.html
@@ -288,7 +288,7 @@
       <tr>
         <th scope="row">2</th>
         <td>61802</td>
-        <td>Dog Bed Gent antibac 80x60 cm</td>
+        <td class="ellipsis">Dog Bed Gent antibac 80x60 cm</td>
         <td>[------- 品牌商品 -------]-Hunter </td>
         <td>商品</td>
         <td>4016739618023</td>
@@ -302,7 +302,7 @@
      <tr>
         <th scope="row">3</th>
         <td>61802</td>
-        <td>Dog Bed Gent antibac 80x60 cm</td>
+        <td class="ellipsis">Dog Bed Gent antibac 80x60 cm</td>
         <td>[------- 品牌商品 -------]-Hunter </td>
         <td>商品</td>
         <td>4016739618023</td>
@@ -317,7 +317,7 @@
       <tr>
         <th scope="row">4</th>
         <td>61802</td>
-        <td>Dog Bed Gent antibac 80x60 cm</td>
+        <td class="ellipsis">Dog Bed Gent antibac 80x60 cm</td>
         <td>[------- 品牌商品 -------]-Hunter </td>
         <td>商品</td>
         <td>4016739618023</td>
@@ -332,7 +332,7 @@
       <tr>
         <th scope="row">5</th>
         <td>61802</td>
-        <td>Dog Bed Gent antibac 80x60 cm</td>
+        <td class="ellipsis">Dog Bed Gent antibac 80x60 cm</td>
         <td>[------- 品牌商品 -------]-Hunter </td>
         <td>商品</td>
         <td>4016739618023</td>
@@ -347,7 +347,7 @@
       <tr>
         <th scope="row">6</th>
         <td>61802</td>
-        <td>Dog Bed Gent antibac 80x60 cm</td>
+        <td class="ellipsis">Dog Bed Gent antibac 80x60 cm</td>
         <td>[------- 品牌商品 -------]-Hunter </td>
         <td>商品</td>
         <td>4016739618023</td>
@@ -362,7 +362,7 @@
       <tr>
       <th scope="row">7</th>
       <td>61802</td>
-        <td>Dog Bed Gent antibac 80x60 cm</td>
+        <td class="ellipsis">Dog Bed Gent antibac 80x60 cm</td>
         <td>[------- 品牌商品 -------]-Hunter </td>
         <td>商品</td>
         <td>4016739618023</td>
