--- a/CreateProduct.html
+++ b/CreateProduct.html
@@ -52,9 +52,8 @@
  
    <nav class="navbar navbar1 navbar-expand-lg navbar-light">
     
-    <a class="navbar-brand navbarTitle pos" href="#">POS前台</a>
-    <!-- active -->
- 
+    <a class="navbar-brand navbarTitle pos active" href="#">POS前台</a>
+   
     <button class="navbar-toggler navbarToggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -177,9 +176,9 @@
           </div>
          
          <div class="totalBtn">
-          <button type="submit" class="btn searchFormBtn mt-3 mr-2">搜尋</button>
-          <button type="submit" class="btn searchFormBtn mt-3 mr-2">清除</button>
-          <button type="submit" class="btn searchFormBtn mt-3 mr-2">匯出表格</button>
+          <button type="button" class="btn searchFormBtn searchBtn buttonActive mt-3 mr-2">搜尋</button>
+          <button type="button" class="btn searchFormBtn clearBtn  mt-3 mr-2">清除</button>
+          <button type="button" class="btn searchFormBtn submitBtn mt-3 mr-2">匯出表格</button>
         </div>
         </form>
          </div>
