--- a/CreateProductPage.html
+++ b/CreateProductPage.html
@@ -1,1 +1,370 @@
-<h1>test</h1>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
+    integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+  <title>CreateProductPage</title>
+  <link rel="stylesheet" href="CreateProductPage.css">
+</head>
+
+<body>
+  <div class="content">
+
+    <!-- createProductTitle -->
+    <div class="createProductTitle container-fluid">
+      <nav class="navbar-expand-lg navbar-light">
+
+        <div class="navbar-brand title text-center">
+          <P>新增商品</P>
+        </div>
+
+      </nav>
+    </div>
+    <!-- finish createProductTitle -->
+
+    <!-- main -->
+    <div class="main">
+
+
+
+      <div class="informationForm container-fluid">
+        <div class="row">
+          <form class="form">
+
+
+            <div class="basicInformation">
+
+              <div class="basicInformationTitle">基本資訊(必填)</div>
+
+
+              <div class="basicInformationInput">
+
+                <div>
+
+                  <div class="form-group">
+                    <span class="basicName basicInformationInputName">名稱 :</span>
+                    <label for="basicInformationProductName">
+                      <input type="text" class="form-control" id="basicInformationProductName" placeholder="2021/08/19">
+                    </label>
+                  </div>
+
+                  <div class="form-group">
+                    <span class="basicInformationCode basicInformationInputName">代碼 :</span>
+                    <label for="exampleInputPassword2">
+                      <input type="number" class="form-control" id="exampleInputPassword2">
+                    </label>
+                  </div>
+
+                </div>
+
+                <div>
+
+                  <div class="form-group">
+                    <span class="basicInformationCategory basicInformationInputName">類別 :</span>
+                    <label for="exampleFormControlSelect1">
+                      <select class="form-control select" id="exampleFormControlSelect1">
+                        <option></option>
+                        <option></option>
+                        <option></option>
+                        <option></option>
+                        <option></option>
+                      </select>
+                    </label>
+
+                  </div>
+
+
+                  <div class="form-group">
+                    <div>
+                      <span class="basicPrice basicInformationInputName">售價 :</span>
+                      <label for="exampleInputPassword1">
+                        <input type="number" class="form-control" id="exampleInputPassword1">
+                      </label>
+                    </div>
+                  </div>
+
+                </div>
+
+                <div>
+
+                  <div class="form-group">
+                    <span class="basicInformationUnit basicInformationInputName">單位 :</span>
+                    <label for="exampleFormControlSelect1">
+                      <select class="form-control select" id="exampleFormControlSelect1">
+                        <option></option>
+                        <option></option>
+                        <option></option>
+                        <option></option>
+                        <option></option>
+                      </select>
+                    </label>
+                  </div>
+
+
+                  <div class="form-group">
+                    <span class="basicInformationCertificate basicInformationInputName">憑證類型 :</span>
+                    <label for="exampleFormControlSelect1">
+                      <select class="form-control select" id="exampleFormControlSelect1">
+                        <option></option>
+                        <option></option>
+                        <option></option>
+                        <option></option>
+                        <option></option>
+                      </select>
+                    </label>
+                  </div>
+
+                </div>
+
+
+              </div>
+
+
+
+
+            </div>
+            <!-- /basicInformation -->
+
+
+
+
+
+            <!-- otherInformation -->
+
+            <div class="otherInformation">
+              <div class="otherInformationTitle">其他資訊(選填)</div>
+
+
+              <div class="otherInformationInput">
+
+
+                <div>
+
+                  <div class="form-group">
+                    <span class="basicInformationInputName otherInternationalBarcode">國際條碼 :</span>
+                    <label for="basicInformationProductName">
+                      <input type="text" class="form-control" id="basicInformationProductName">
+                    </label>
+                  </div>
+
+                  <div class="form-group">
+                    <span class="basicInformationInputName otherOldCode">舊代碼 :</span>
+                    <label for="exampleInputPassword3">
+                      <input type="number" class="form-control" id="exampleInputPassword3">
+                    </label>
+                  </div>
+
+                </div>
+
+                <div>
+
+                  <div class="form-group">
+                    <span class="basicInformationInputName otherInformationAttribute">屬性 :</span>
+                    <label for="exampleFormControlSelect1">
+                      <select class="form-control select" id="exampleFormControlSelect1">
+                        <option></option>
+                        <option></option>
+                        <option></option>
+                        <option></option>
+                        <option></option>
+                      </select>
+                    </label>
+
+                  </div>
+
+
+                  <div class="form-group">
+                    <span class="basicInformationInputName otherInformationColor">顏色 :</span>
+                    <label for="exampleFormControlSelect1">
+                      <select class="form-control select" id="exampleFormControlSelect1">
+                        <option></option>
+                        <option></option>
+                        <option></option>
+                        <option></option>
+                        <option></option>
+                      </select>
+                    </label>
+
+                  </div>
+
+                </div>
+
+
+
+
+                <div>
+
+                  <div class="form-group otherInformationButtonRelative">
+                    <span class="basicInformationInputName otherInformationSupplier">供應商 :</span>
+                    <label for="exampleInputPassword4">
+                      <input type="number" class="form-control" id="exampleInputPassword4">
+                    </label>
+
+                    <span class=" otherInformationButton">
+                      <button type="button" class="btn inquireBtn">
+                        <span class="buttonWord">
+                          查詢
+                        </span>
+                      </button>
+                      <button type="button" class="btn removeBtn">
+                        <span class="removeButtonWord">
+                          清除
+                        </span>
+                      </button>
+
+                    </span>
+
+                  </div>
+
+
+
+
+                  <div class="form-group">
+                    <span class="basicInformationInputName otherInformationBrand">品牌 :</span>
+                    <label for="exampleFormControlSelect1">
+                      <select class="form-control select" id="exampleFormControlSelect1">
+                        <option></option>
+                        <option></option>
+                        <option></option>
+                        <option></option>
+                        <option></option>
+                      </select>
+                    </label>
+                  </div>
+
+                </div>
+
+
+
+              </div>
+              <!-- otherInformationInput -->
+
+              <div class="form-group otherInformationDescriptionRelative">
+                <!-- <div class=""> -->
+                <span class="basicInformationInputName otherInformationDescriptionTitle">描述 :</span>
+                <!-- </div> -->
+                <!-- <div> -->
+                <label for="exampleInputPassword5">
+                  <input type="number" class="form-control otherInformationDescriptionInput" id="exampleInputPassword5">
+                </label>
+                <!-- </div> -->
+              </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+            </div>
+            <!-- /otherInformation -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+            <!-- <div class="totalBtn">
+                <button type="button" class="btn searchFormBtn searchBtn buttonActive mt-3 mr-2">搜尋</button>
+                <button type="button" class="btn searchFormBtn clearBtn  mt-3 mr-2">清除</button>
+                <button type="button" class="btn searchFormBtn submitBtn mt-3 mr-2">匯出表格</button>
+              </div> -->
+          </form>
+        </div>
+      </div>
+      <!-- informationForm -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    </div>
+    <!-- /main -->
+
+  </div>
+
+
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+    integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js"
+    integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF"
+    crossorigin="anonymous"></script>
+  <script src="./CreateProductPage.js"></script>
+</body>
+
+</html>
