--- a/CreateProductPage.html
+++ b/CreateProductPage.html
@@ -255,6 +255,149 @@
               </div>
 
 
+              <!-- otherInformationInputPart2 -->
+
+              <div class="otherInformationInputPart2">
+                <div class="otherInformationSaleDate">
+
+                  <div class="otherInformationCalendarImgRelative">
+
+                    <span class="basicInformationInputName otherInformationSaleDateTitle">可銷售日期 :</span>
+                    <label for="exampleInputPassword3">
+                      <input type="text" class="form-control otherInformationSaleDateInput" id="exampleInputPassword3">
+                    </label>
+                    <img src="./img/calendar.png" class="otherInformationCalendarImg" alt="">
+
+
+                    <span class="basicInformationInputName otherInformationDash">-</span>
+                    <label for="exampleInputPassword3">
+                      <input type="text" class="form-control otherInformationSaleDateInput" id="exampleInputPassword3">
+                    </label>
+                    <img src="./img/calendar.png" class="otherInformationCalendarImg2" alt="">
+
+                  </div>
+
+
+                  <div>
+                    <span class="basicInformationInputName otherInformationIfInvalid">是否失效 :</span>
+                    <label for="exampleFormControlSelect1">
+                      <select class="form-control select  otherInformationIfInvalidSelect"
+                        id="exampleFormControlSelect1">
+                        <option></option>
+                        <option></option>
+                        <option></option>
+                        <option></option>
+                        <option></option>
+                      </select>
+                    </label>
+
+                  </div>
+                </div>
+
+
+                <!-- otherInformationSetPrice -->
+                <div class="otherInformationSetPrice">
+
+                  <div class="d-flex flex-row">
+                    <div>
+                      <span class="basicInformationInputName otherInformationSetPriceTitle">自由設定價格 :</span>
+                      <label for="exampleFormControlSelect1">
+                        <select class="form-control select  otherInformationIfInvalidSelect otherInformationTitleInput"
+                          id="exampleFormControlSelect1">
+                          <option></option>
+                          <option></option>
+                          <option></option>
+                          <option></option>
+                          <option></option>
+                        </select>
+                      </label>
+
+                    </div>
+
+
+                    <div>
+                      <span class="basicInformationInputName discountMerchandise">是否為折扣商品 :</span>
+                      <label for="exampleFormControlSelect1">
+                        <select class="form-control select  otherInformationIfInvalidSelect
+                        otherInformationTitleInput" id="exampleFormControlSelect1">
+                          <option></option>
+                          <option></option>
+                          <option></option>
+                          <option></option>
+                          <option></option>
+                        </select>
+                      </label>
+
+                    </div>
+
+
+                    <div>
+                      <span class="basicInformationInputName otherInformationBatchNumber
+                      ">批號控制 :</span>
+                      <label for="exampleFormControlSelect1">
+                        <select class="form-control select  otherInformationIfInvalidSelect
+                        otherInformationTitleInput" id="exampleFormControlSelect1">
+                          <option></option>
+                          <option></option>
+                          <option></option>
+                          <option></option>
+                          <option></option>
+                        </select>
+                      </label>
+
+                    </div>
+
+                    <div>
+                      <span class="basicInformationInputName otherInformationInventory">是否為存貨 :</span>
+                      <label for="exampleFormControlSelect1">
+                        <select class="form-control select  otherInformationIfInvalidSelect
+                        otherInformationTitleInput" id="exampleFormControlSelect1">
+                          <option></option>
+                          <option></option>
+                          <option></option>
+                          <option></option>
+                          <option></option>
+                        </select>
+                      </label>
+
+                    </div>
+
+
+                    <div>
+                      <span class="basicInformationInputName otherInformationSafetyStock">安全庫存量 :</span>
+                      <label for="exampleInputPassword3">
+                        <input type="text" class="form-control otherInformationIfInvalidSelect
+                        otherInformationTitleInput" id="exampleInputPassword3">
+                      </label>
+
+                    </div>
+                  </div>
+
+
+
+                </div>
+                <!-- /otherInformationSetPrice -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+              </div>
+              <!-- /otherInformationInputPart2 -->
 
 
 
