--- a/CreateProductPage.html
+++ b/CreateProductPage.html
@@ -244,14 +244,13 @@
               <!-- otherInformationInput -->
 
               <div class="form-group otherInformationDescriptionRelative">
-                <!-- <div class=""> -->
+
                 <span class="basicInformationInputName otherInformationDescriptionTitle">描述 :</span>
-                <!-- </div> -->
-                <!-- <div> -->
+
                 <label for="exampleInputPassword5">
                   <input type="number" class="form-control otherInformationDescriptionInput" id="exampleInputPassword5">
                 </label>
-                <!-- </div> -->
+
               </div>
 
 
@@ -298,7 +297,7 @@
                 <!-- otherInformationSetPrice -->
                 <div class="otherInformationSetPrice">
 
-                  <div class="d-flex flex-row">
+                  <div class="otherInformationAllTitle">
                     <div>
                       <span class="basicInformationInputName otherInformationSetPriceTitle">自由設定價格 :</span>
                       <label for="exampleFormControlSelect1">
@@ -319,7 +318,7 @@
                       <span class="basicInformationInputName discountMerchandise">是否為折扣商品 :</span>
                       <label for="exampleFormControlSelect1">
                         <select class="form-control select  otherInformationIfInvalidSelect
-                        otherInformationTitleInput" id="exampleFormControlSelect1">
+                        otherInformationTitleInput discountMerchandiseInput" id="exampleFormControlSelect1">
                           <option></option>
                           <option></option>
                           <option></option>
@@ -336,7 +335,7 @@
                       ">批號控制 :</span>
                       <label for="exampleFormControlSelect1">
                         <select class="form-control select  otherInformationIfInvalidSelect
-                        otherInformationTitleInput" id="exampleFormControlSelect1">
+                        otherInformationTitleInput otherInformationBatchNumberInput" id="exampleFormControlSelect1">
                           <option></option>
                           <option></option>
                           <option></option>
@@ -351,7 +350,7 @@
                       <span class="basicInformationInputName otherInformationInventory">是否為存貨 :</span>
                       <label for="exampleFormControlSelect1">
                         <select class="form-control select  otherInformationIfInvalidSelect
-                        otherInformationTitleInput" id="exampleFormControlSelect1">
+                        otherInformationTitleInput otherInformationInventoryInput" id="exampleFormControlSelect1">
                           <option></option>
                           <option></option>
                           <option></option>
@@ -367,7 +366,7 @@
                       <span class="basicInformationInputName otherInformationSafetyStock">安全庫存量 :</span>
                       <label for="exampleInputPassword3">
                         <input type="text" class="form-control otherInformationIfInvalidSelect
-                        otherInformationTitleInput" id="exampleInputPassword3">
+                        otherInformationTitleInput otherInformationSafetyStockInput" id="exampleInputPassword3">
                       </label>
 
                     </div>
@@ -377,6 +376,165 @@
 
                 </div>
                 <!-- /otherInformationSetPrice -->
+
+
+                <div class="otherInformationDrugOff">
+
+                  <div>
+                    <span class="basicInformationInputName
+                    otherInformationDrugOffTitle">是否可斷藥 :</span>
+                    <label for="exampleFormControlSelect1">
+                      <select
+                        class="form-control select otherInformationIfInvalidSelect  otherInformationDrugOffTitleInput"
+                        id="exampleFormControlSelect1">
+                        <option></option>
+                        <option></option>
+                        <option></option>
+                        <option></option>
+                        <option></option>
+                      </select>
+                    </label>
+
+                  </div>
+
+
+                  <div>
+
+                    <span class="basicInformationInputName otherInformationTestValue">檢驗數值範圍 :</span>
+                    <span class="otherInformationLeast">最小</span>
+                    <label for="exampleInputPassword3">
+                      <input type="text" class="form-control otherInformationLeastInput" id="exampleInputPassword3">
+                    </label>
+
+                    <span class="otherInformationTestValueDash">-</span>
+
+                    <span class="otherInformationMaximum"> 最大</span>
+                    <label for="exampleInputPassword3">
+                      <input type="text" class="form-control otherInformationMaximumInput" id="exampleInputPassword3">
+                    </label>
+
+
+                  </div>
+
+                </div>
+                <!-- /otherInformationDrugOff -->
+
+              </div>
+              <!-- /otherInformationInputPart2 -->
+
+
+              <div class="otherInformationInputPart3">
+
+                <div class="otherInformationSubjects">
+
+                  <div class="form-group otherInformationButtonRelative otherInformationPurchase">
+                    <span class="basicInformationInputName otherInformationPurchaseTitle">進貨科目 :</span>
+                    <label for="exampleInputPassword4">
+                      <input type="number" class="form-control otherInformationPurchaseInput"
+                        id="exampleInputPassword4">
+                    </label>
+
+                    <span class="otherInformationButton otherInformationSubjectsButton">
+                      <button type="button" class="btn inquireBtn">
+                        <span class="buttonWord">
+                          查詢
+                        </span>
+                      </button>
+                      <button type="button" class="btn removeBtn">
+                        <span class="removeButtonWord">
+                          清除
+                        </span>
+                      </button>
+
+                    </span>
+
+                  </div>
+
+
+
+                  <div class="form-group otherInformationButtonRelative">
+                    <span class="basicInformationInputName otherInformationSalesTitle">銷貨科目 :</span>
+                    <label for="exampleInputPassword4">
+                      <input type="number" class="form-control  otherInformationSalesInput" id="exampleInputPassword4">
+                    </label>
+
+                    <span class=" otherInformationButton otherInformationSubjectsButton">
+                      <button type="button" class="btn inquireBtn">
+                        <span class="buttonWord">
+                          查詢
+                        </span>
+                      </button>
+                      <button type="button" class="btn removeBtn">
+                        <span class="removeButtonWord">
+                          清除
+                        </span>
+                      </button>
+
+                    </span>
+
+                  </div>
+
+                </div>
+
+
+
+                <div class="otherInformationSaleCurrencyFlex">
+
+                  <div>
+                    <span class="basicInformationInputName otherInformationSaleCurrencyTitle">銷售幣別 :</span>
+                    <label for="exampleFormControlSelect1">
+                      <select class="form-control select otherInformationSaleCurrencyInput"
+                        id="exampleFormControlSelect1">
+                        <option></option>
+                        <option></option>
+                        <option></option>
+                        <option></option>
+                        <option></option>
+                      </select>
+                    </label>
+
+                  </div>
+
+
+                  <div>
+                    <span class="basicInformationInputName otherInformationCostCalculation">成本計算原則 :</span>
+
+                    <label for="exampleFormControlSelect1">
+                      <select class="form-control select otherInformationCostCalculationInput"
+                        id="exampleFormControlSelect1">
+                        <option></option>
+                        <option></option>
+                        <option></option>
+                        <option></option>
+                        <option></option>
+                      </select>
+                    </label>
+
+                  </div>
+
+                  <div>
+                    <span class="basicInformationInputName otherInformationTaxCategory">稅項類別 :</span>
+
+                    <label for="exampleFormControlSelect1">
+                      <select class="form-control select otherInformationTaxCategoryInput"
+                        id="exampleFormControlSelect1">
+                        <!-- otherInformationIfInvalidSelect otherInformationDrugOffTitleInput -->
+                        <option></option>
+                        <option></option>
+                        <option></option>
+                        <option></option>
+                        <option></option>
+                      </select>
+                    </label>
+
+                  </div>
+
+
+                </div>
+
+
+
+
 
 
 
@@ -397,7 +555,36 @@
 
 
               </div>
-              <!-- /otherInformationInputPart2 -->
+              <!-- otherInformationInputPart3 -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
