--- a/CreateProductPage.html
+++ b/CreateProductPage.html
@@ -201,7 +201,8 @@
                   <div class="form-group otherInformationButtonRelative">
                     <span class="basicInformationInputName otherInformationSupplier">供應商 :</span>
                     <label for="exampleInputPassword4">
-                      <input type="number" class="form-control" id="exampleInputPassword4">
+                      <input type="number" class="form-control otherInformationSupplierInput"
+                        id="exampleInputPassword4">
                     </label>
 
                     <span class=" otherInformationButton">
@@ -532,30 +533,177 @@
 
                 </div>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
               </div>
               <!-- otherInformationInputPart3 -->
+
+
+              <div class="otherInformationInputPart4">
+
+                <div class="otherInformationPart4AllInput">
+
+                  <div class="1">
+
+                    <div>
+                      <span class="basicInformationInputName otherInformationBoxNumber">每板箱數 :</span>
+                      <label for="exampleInputPassword3">
+                        <input type="text" class="form-control otherInformationBoxNumberInput"
+                          id="exampleInputPassword3">
+                      </label>
+
+                    </div>
+
+
+
+                    <div>
+                      <span
+                        class="basicInformationInputName otherInformationBoxNumber otherInformationUnitGrossWeight">單位毛重
+                        :</span>
+                      <label for="exampleInputPassword3">
+                        <input type="text" class="form-control otherInformationBoxNumberInput"
+                          id="exampleInputPassword3">
+                      </label>
+
+                    </div>
+
+
+                  </div>
+
+
+
+
+
+                  <div class="2">
+
+                    <div>
+                      <span class="basicInformationInputName otherInformationBoxNumber otherInformationQuantity">每箱數量
+                        :</span>
+                      <label for="exampleInputPassword3">
+                        <input type="text" class="form-control otherInformationBoxNumberInput"
+                          id="exampleInputPassword3">
+                      </label>
+
+                    </div>
+
+
+
+                    <div>
+                      <span
+                        class="basicInformationInputName otherInformationBoxNumber otherInformationUnitNetWeight">單位淨重
+                        :</span>
+                      <label for="exampleInputPassword3">
+                        <input type="text" class="form-control otherInformationBoxNumberInput"
+                          id="exampleInputPassword3">
+                      </label>
+
+                    </div>
+
+
+                  </div>
+
+
+
+
+
+                  <div class="3">
+                    <div>
+                      <span class="basicInformationInputName otherInformationBoxNumber otherInformationNumber">每盒數量
+                        :</span>
+                      <label for="exampleInputPassword3">
+                        <input type="text" class="form-control otherInformationBoxNumberInput"
+                          id="exampleInputPassword3">
+                      </label>
+
+                    </div>
+
+
+
+                    <div>
+                      <span class="basicInformationInputName otherInformationVolume">材積 :</span>
+                      <label for="exampleInputPassword3">
+                        <input type="text" class="form-control otherInformationBoxNumberInput"
+                          id="exampleInputPassword3">
+                      </label>
+
+                    </div>
+
+
+                  </div>
+
+
+
+
+                  <div class="4">
+                    <div>
+                      <span class="basicInformationInputName otherInformationBoxNumber otherInformationSpecification">規格
+                        :</span>
+                      <label for="exampleInputPassword3">
+                        <input type="text" class="form-control otherInformationBoxNumberInput"
+                          id="exampleInputPassword3">
+                      </label>
+
+                    </div>
+
+
+
+                    <div>
+                      <span class="basicInformationInputName otherInformationCalculationTitle">長寬高 :</span>
+                      <label for="exampleInputPassword3">
+                        <input type="text" class="form-control otherInformationBoxNumberInput
+                        otherInformationCalculationInput" id="exampleInputPassword3">
+                      </label>
+
+                      <span><img src="./img/x.png" alt=""></span>
+                      <label for="exampleInputPassword3">
+                        <input type="text" class="form-control otherInformationBoxNumberInput
+                       otherInformationCalculationInput" id="exampleInputPassword3">
+                      </label>
+
+                      <span><img src="./img/x.png" alt=""></span>
+                      <label for="exampleInputPassword3">
+                        <input type="text" class="form-control otherInformationBoxNumberInput
+                        otherInformationCalculationInput" id="exampleInputPassword3">
+                      </label>
+
+                      <span>cm</span>
+                    </div>
+
+
+
+                  </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+                </div>
+              </div>
+              <!-- otherInformationInputPart4 -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
