--- a/CreateProductPage.html
+++ b/CreateProductPage.html
@@ -650,14 +650,14 @@
                         <input type="text" class="form-control otherInformationBoxNumberInput
                         otherInformationCalculationInput" id="exampleInputPassword3">
                       </label>
-
-                      <span><img src="./img/x.png" alt=""></span>
+                      <!-- <img src="./img/x.png" alt=""> -->
+                      <span>X</span>
                       <label for="exampleInputPassword3">
                         <input type="text" class="form-control otherInformationBoxNumberInput
                        otherInformationCalculationInput" id="exampleInputPassword3">
                       </label>
-
-                      <span><img src="./img/x.png" alt=""></span>
+                      <!-- <img src="./img/x.png" alt=""> -->
+                      <span>X</span>
                       <label for="exampleInputPassword3">
                         <input type="text" class="form-control otherInformationBoxNumberInput
                         otherInformationCalculationInput" id="exampleInputPassword3">
@@ -676,8 +676,8 @@
                 <div class="otherInformationUploadPhoto">
 
                   <span class="basicInformationInputName otherInformationProductPicture">商品圖片</span>
-                  <img src="/Img/arrow.png" alt="">
-
+                  <img src="https://i.postimg.cc/g29fW6dD/arrow.png" alt="">
+                  <!-- /Img/arrow.png -->
 
                   <span class="otherInformationUploadPhotoTitle">上傳照片</span>
 
