--- a/CreateProductPage.html
+++ b/CreateProductPage.html
@@ -265,14 +265,14 @@
                     <label for="exampleInputPassword3">
                       <input type="text" class="form-control otherInformationSaleDateInput" id="exampleInputPassword3">
                     </label>
-                    <img src="./img/calendar.png" class="otherInformationCalendarImg" alt="">
+                    <img src="./Img/calendar.png" class="otherInformationCalendarImg" alt="">
 
 
                     <span class="basicInformationInputName otherInformationDash">-</span>
                     <label for="exampleInputPassword3">
                       <input type="text" class="form-control otherInformationSaleDateInput" id="exampleInputPassword3">
                     </label>
-                    <img src="./img/calendar.png" class="otherInformationCalendarImg2" alt="">
+                    <img src="./Img/calendar.png" class="otherInformationCalendarImg2" alt="">
 
                   </div>
 
@@ -651,13 +651,13 @@
                         otherInformationCalculationInput" id="exampleInputPassword3">
                       </label>
                       <!-- <img src="./img/x.png" alt=""> -->
-                      <span>X</span>
+                      <span><img src="./Img/x.png" alt=""></span>
                       <label for="exampleInputPassword3">
                         <input type="text" class="form-control otherInformationBoxNumberInput
                        otherInformationCalculationInput" id="exampleInputPassword3">
                       </label>
                       <!-- <img src="./img/x.png" alt=""> -->
-                      <span>X</span>
+                      <span><img src="./Img/x.png" alt=""></span>
                       <label for="exampleInputPassword3">
                         <input type="text" class="form-control otherInformationBoxNumberInput
                         otherInformationCalculationInput" id="exampleInputPassword3">
@@ -676,9 +676,9 @@
                 <div class="otherInformationUploadPhoto">
 
                   <span class="basicInformationInputName otherInformationProductPicture">商品圖片</span>
-                  <img src="https://i.postimg.cc/g29fW6dD/arrow.png" alt="">
+                  <img src="./Img/arrow.png" alt="">
                   <!-- /Img/arrow.png -->
-
+                  <!-- https://i.postimg.cc/g29fW6dD/arrow.png -->
                   <span class="otherInformationUploadPhotoTitle">上傳照片</span>
 
 
