--- a/CreateProductPage.html
+++ b/CreateProductPage.html
@@ -539,7 +539,7 @@
 
                 <div class="otherInformationPart4AllInput">
 
-                  <div class="1">
+                  <div>
 
                     <div>
                       <span class="basicInformationInputName otherInformationBoxNumber">每板箱數 :</span>
@@ -571,7 +571,7 @@
 
 
 
-                  <div class="2">
+                  <div>
 
                     <div>
                       <span class="basicInformationInputName otherInformationBoxNumber otherInformationQuantity">每箱數量
@@ -603,7 +603,7 @@
 
 
 
-                  <div class="3">
+                  <div>
                     <div>
                       <span class="basicInformationInputName otherInformationBoxNumber otherInformationNumber">每盒數量
                         :</span>
@@ -631,7 +631,7 @@
 
 
 
-                  <div class="4">
+                  <div>
                     <div>
                       <span class="basicInformationInputName otherInformationBoxNumber otherInformationSpecification">規格
                         :</span>
@@ -650,13 +650,13 @@
                         <input type="text" class="form-control otherInformationBoxNumberInput
                         otherInformationCalculationInput" id="exampleInputPassword3">
                       </label>
-                      <!-- <img src="./img/x.png" alt=""> -->
+
                       <span><img src="./Img/x.png" alt=""></span>
                       <label for="exampleInputPassword3">
                         <input type="text" class="form-control otherInformationBoxNumberInput
                        otherInformationCalculationInput" id="exampleInputPassword3">
                       </label>
-                      <!-- <img src="./img/x.png" alt=""> -->
+
                       <span><img src="./Img/x.png" alt=""></span>
                       <label for="exampleInputPassword3">
                         <input type="text" class="form-control otherInformationBoxNumberInput
@@ -677,8 +677,6 @@
 
                   <span class="basicInformationInputName otherInformationProductPicture">商品圖片</span>
                   <img src="./Img/arrow.png" alt="">
-                  <!-- /Img/arrow.png -->
-                  <!-- https://i.postimg.cc/g29fW6dD/arrow.png -->
                   <span class="otherInformationUploadPhotoTitle">上傳照片</span>
 
 
